--- a/package.json
+++ b/package.json
@@ -13,30 +13,30 @@
   "author": "Steve Bennett <me@stevebennett.me> (http://stevebennett.me)",
   "license": "CC-BY-NC-4.0",
   "dependencies": {
-    "colors": "^1.1.2",
-    "command-line-args": "^5.1.1",
-    "command-line-usage": "^6.1.0",
-    "csv-string": "^3.1.8",
-    "d3-dsv": "^1.2.0",
-    "download": "^5.0.2",
+    "@mapbox/mbtiles": "^0.11.0",
+    "colors": "^1.4.0",
+    "command-line-args": "^5.2.0",
+    "command-line-usage": "^6.1.1",
+    "csv-string": "^4.0.1",
+    "d3-dsv": "^3.0.1",
+    "download": "^8.0.0",
     "execution-time": "^1.4.1",
-    "extract-zip": "^1.6.6",
-    "fs-extra": "^8.1.0",
+    "extract-zip": "^2.0.1",
+    "fs-extra": "^10.0.0",
     "fs-ndjson": "^1.1.0",
-    "glob": "^7.1.2",
-    "jsonfile": "^4.0.0",
-    "make-dir": "^3.0.2",
-    "mapbox-upload": "^4.2.4",
-    "mbtiles": "^0.9.0",
-    "ndjson": "^1.5.0",
+    "glob": "^7.2.0",
+    "jsonfile": "^6.1.0",
+    "make-dir": "^3.1.0",
+    "ndjson": "^2.0.0",
     "recursive-readdir": "^2.2.2",
-    "tessera": "^0.14.1",
+    "tessera": "^0.15.0",
     "tippecanoe": "^0.6.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-airbnb-base": "^14.2.1",
-    "eslint-plugin-import": "^2.24.0"
+    "eslint": "^7.32.0"
+  },
+  "engines": {
+    "node": "16.6.1"
   }
 }
