--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "author": "Steve Bennett <me@stevebennett.me> (http://stevebennett.me)",
   "license": "CC-BY-NC-4.0",
+  "type": "module",
   "dependencies": {
     "@mapbox/mbtiles": "^0.11.0",
     "colors": "^1.4.0",
@@ -28,6 +29,7 @@
     "jsonfile": "^6.1.0",
     "make-dir": "^3.1.0",
     "ndjson": "^2.0.0",
+    "p-limit": "^4.0.0",
     "recursive-readdir": "^2.2.2",
     "tessera": "^0.15.0",
     "tippecanoe": "^0.6.0",
