--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "command-line-usage": "^6.1.0",
     "csv-string": "^3.1.8",
     "d3-dsv": "^1.2.0",
+    "dotenv": "^10.0.0",
     "download": "^5.0.2",
     "execution-time": "^1.4.1",
     "extract-zip": "^1.6.6",
@@ -29,6 +30,8 @@
     "mapbox-upload": "^4.2.4",
     "mbtiles": "^0.9.0",
     "ndjson": "^1.5.0",
+    "pg": "^8.7.1",
+    "pg-promise": "^10.11.0",
     "recursive-readdir": "^2.2.2",
     "tessera": "^0.14.1",
     "tippecanoe": "^0.6.0",
