--- a/package.json
+++ b/package.json
@@ -4,41 +4,32 @@
   "description": "",
   "main": "src/index.js",
   "scripts": {
-    "all": "node src/index.js",
-    "tiles": "nodemon --watch mbtiles/trees.mbtiles -- node_modules/tessera/bin/tessera.js -p 4011 mbtiles://./mbtiles/trees.mbtiles",
-    "get": "./1-gettrees.js && ./2-loadtrees.js",
-    "process": "./3-processFiles.js &&  ./3a-updateTaxoCount.js && ./3b-addSpeciesCounts.js",
-    "full-upload": "./1-gettrees.js &&  ./2-loadtrees.js && ./3-processFiles.js &&  ./3a-updateTaxoCount.js && ./3b-addSpeciesCounts.js && ./4-makeVectorTiles.js && ./5-upload.js",
-    "export": "node ./export-sources.js; cp sources-out.json ../opentrees/src"
+    "all": "node bin/all.js",
+    "download": "node bin/download.js",
+    "convert": "node bin/convert.js",
+    "normalize": "node bin/normalize.js",
+    "concatenate": "node bin/concatenate.js",
+    "tile": "node bin/tile.js",
+    "tile-server": "node bin/tile-server.js"
   },
-  "author": "Steve Bennett <me@stevebennett.me> (http://stevebennett.me)",
+  "author": "Team 'Water the Trees' (waterthetrees.com)",
   "license": "CC-BY-NC-4.0",
   "type": "module",
   "dependencies": {
-    "@mapbox/mbtiles": "^0.11.0",
+    "@mapbox/mbtiles": "^0.12.1",
     "colors": "^1.4.0",
-    "command-line-args": "^5.2.0",
-    "command-line-usage": "^6.1.1",
-    "csv-string": "^4.0.1",
-    "d3-dsv": "^3.0.1",
     "dotenv": "^10.0.0",
-    "download": "^8.0.0",
-    "execution-time": "^1.4.1",
+    "express": "^4.17.1",
     "extract-zip": "^2.0.1",
-    "fs-extra": "^10.0.0",
-    "fs-ndjson": "^1.1.0",
     "glob": "^7.2.0",
-    "jsonfile": "^6.1.0",
     "make-dir": "^3.1.0",
-    "ndjson": "^2.0.0",
-    "ogr2ogr": "^3.1.0",
+    "merge-files": "^0.1.2",
     "p-limit": "^4.0.0",
     "pg": "^8.7.1",
     "pg-promise": "^10.11.1",
     "recursive-readdir": "^2.2.2",
     "stream": "^0.0.2",
     "tessera": "^0.15.0",
-    "tippecanoe": "^0.6.0",
     "winston": "^3.3.3"
   },
   "devDependencies": {
