Add `lint` npm script
Remove the double `format` in identity-source.js.
Log detailed info for sources with missing fields.
Add Fuse.js package to search for possible matches of missing fields.
Fix "numberic" and other typos.
Check for JSON appearing in .csv files.
Add support for custom ogr2ogr command in .env file, to handle Windows usage.
Update README.md with Windows install info.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "all": "node bin/all.js",
     "download": "node bin/download.js",
+    "lint": "node bin/lint.js",
     "convert": "node bin/convert.js",
     "normalize": "node bin/normalize.js",
     "concatenate": "node bin/concatenate.js",
@@ -27,6 +28,7 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "extract-zip": "^2.0.1",
+    "fuse.js": "^6.5.3",
     "glob": "^8.0.1",
     "make-dir": "^3.1.0",
     "merge-files": "^0.1.2",
