Update import for tree-id (#29)
* Update import for tree-id

* Remove unused import statement

* Update call for createIdForTree to match new import formatting

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@mapbox/mapbox-sdk": "^0.13.3",
     "@mapbox/mbtiles": "^0.12.1",
+    "@waterthetrees/tree-id": "^1.0.5",
     "aws-sdk": "^2.1115.0",
     "colors": "^1.4.0",
     "dotenv": "^16.0.0",
