merge-trees-to-database - added a merge step to upload to the database - added the db config files similar to the wtt_server - added command line arguments for the merge statement - the merge statement runs ogr2ogr then calls a stored procedure - still some TODOs for more async code

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "convert": "node bin/convert.js",
     "normalize": "node bin/normalize.js",
     "concatenate": "node bin/concatenate.js",
+    "merge": "node bin/merge.js",
     "save": "node bin/save.js",
     "tile": "node bin/tile.js",
     "upload": "node bin/upload.js",
