--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "sqlite3": "^5.1.2",
     "stream": "^0.0.2",
     "tessera": "^0.15.3",
-    "winston": "^3.8.1"
+    "winston": "^3.8.1",
+    "yargs": "^17.7.0"
   },
   "devDependencies": {
     "eslint": "^8.21.0"
